@@ -1,3 +1,13 @@
+*** 20001126_1 by lusky
+hide baninfo for hide_ops (db)
+misc documentation cleanups (wc)
+changed SendWallops and SendServNotice macros to check IsAnOper
+
+
+*** 20001125_1 by lusky
+fix to m_links (db)
+
+
 *** 20001124_4 by lusky
 updated defaults for new stuff in config.h
 
